try fixing contrast issue

--- a/src/index.css
+++ b/src/index.css
@@ -71,7 +71,7 @@ p {
 }
 
 .separator {
-  background-color: #7C7676;
+  background-color: #878282;
   height: 20px;
   width: 750px;
   margin: auto;
